Commit fixed effects function

--- a/sgx_fixed_effects.ipynb
+++ b/sgx_fixed_effects.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fixedeffect(endo = endo, exog = exog,\n",
-    "                entity_eff = True, time_eff = True):\n",
+    "                entity_eff = True, time_eff = True, cov_type = 'unadjusted', **cov_kwargs):\n",
     "    mod = PanelOLS(endo, exog,\n",
     "                   entity_effects=entity_eff,\n",
     "                   time_effects=time_eff)\n",
-    "    res = mod.fit()\n",
+    "    res = mod.fit(cov_type= cov_type, **cov_kwargs)\n",
     "\n",
     "    return res"
    ]
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "  <th>Date:</th>             <td>Sun, Mar 31 2024</td> <th>  R-squared (Overall):</th>   <td>0.1569</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>17:15:03</td>     <th>  Log-likelihood     </th>    <td>1628.0</td>  \n",
+       "  <th>Time:</th>                 <td>23:59:03</td>     <th>  Log-likelihood     </th>    <td>1628.0</td>  \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Cov. Estimator:</th>      <td>Unadjusted</td>    <th>                     </th>       <td></td>     \n",
@@ -191,7 +191,7 @@
        "\\textbf{Estimator:}        &      PanelOLS      & \\textbf{  R-squared (Between):}  &      0.1387      \\\\\n",
        "\\textbf{No. Observations:} &        1728        & \\textbf{  R-squared (Within):}   &      0.2397      \\\\\n",
        "\\textbf{Date:}             &  Sun, Mar 31 2024  & \\textbf{  R-squared (Overall):}  &      0.1569      \\\\\n",
-       "\\textbf{Time:}             &      17:15:03      & \\textbf{  Log-likelihood     }   &      1628.0      \\\\\n",
+       "\\textbf{Time:}             &      23:59:03      & \\textbf{  Log-likelihood     }   &      1628.0      \\\\\n",
        "\\textbf{Cov. Estimator:}   &     Unadjusted     & \\textbf{                     }   &                  \\\\\n",
        "\\textbf{}                  &                    & \\textbf{  F-statistic:       }   &      74.386      \\\\\n",
        "\\textbf{Entities:}         &        216         & \\textbf{  P-value            }   &      0.0000      \\\\\n",
@@ -236,7 +236,7 @@
        "Estimator:                   PanelOLS   R-squared (Between):              0.1387\n",
        "No. Observations:                1728   R-squared (Within):               0.2397\n",
        "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.1569\n",
-       "Time:                        17:15:03   Log-likelihood                    1628.0\n",
+       "Time:                        23:59:03   Log-likelihood                    1628.0\n",
        "Cov. Estimator:            Unadjusted                                           \n",
        "                                        F-statistic:                      74.386\n",
        "Entities:                         216   P-value                           0.0000\n",
@@ -270,7 +270,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "  <th>Date:</th>             <td>Sun, Mar 31 2024</td> <th>  R-squared (Overall):</th>   <td>0.1504</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:33:13</td>     <th>  Log-likelihood     </th>    <td>1615.1</td>  \n",
+       "  <th>Time:</th>                 <td>23:59:10</td>     <th>  Log-likelihood     </th>    <td>1615.1</td>  \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Cov. Estimator:</th>      <td>Unadjusted</td>    <th>                     </th>       <td></td>     \n",
@@ -393,7 +393,7 @@
        "\\textbf{Estimator:}        &      PanelOLS      & \\textbf{  R-squared (Between):}  &      0.1308      \\\\\n",
        "\\textbf{No. Observations:} &        1728        & \\textbf{  R-squared (Within):}   &      0.2401      \\\\\n",
        "\\textbf{Date:}             &  Sun, Mar 31 2024  & \\textbf{  R-squared (Overall):}  &      0.1504      \\\\\n",
-       "\\textbf{Time:}             &      16:33:13      & \\textbf{  Log-likelihood     }   &      1615.1      \\\\\n",
+       "\\textbf{Time:}             &      23:59:10      & \\textbf{  Log-likelihood     }   &      1615.1      \\\\\n",
        "\\textbf{Cov. Estimator:}   &     Unadjusted     & \\textbf{                     }   &                  \\\\\n",
        "\\textbf{}                  &                    & \\textbf{  F-statistic:       }   &      79.286      \\\\\n",
        "\\textbf{Entities:}         &        216         & \\textbf{  P-value            }   &      0.0000      \\\\\n",
@@ -438,7 +438,7 @@
        "Estimator:                   PanelOLS   R-squared (Between):              0.1308\n",
        "No. Observations:                1728   R-squared (Within):               0.2401\n",
        "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.1504\n",
-       "Time:                        16:33:13   Log-likelihood                    1615.1\n",
+       "Time:                        23:59:10   Log-likelihood                    1615.1\n",
        "Cov. Estimator:            Unadjusted                                           \n",
        "                                        F-statistic:                      79.286\n",
        "Entities:                         216   P-value                           0.0000\n",
@@ -472,7 +472,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "  <th>Date:</th>             <td>Sun, Mar 31 2024</td> <th>  R-squared (Overall):</th>   <td>0.3621</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:37:08</td>     <th>  Log-likelihood     </th>    <td>285.77</td>  \n",
+       "  <th>Time:</th>                 <td>23:59:14</td>     <th>  Log-likelihood     </th>    <td>285.77</td>  \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Cov. Estimator:</th>      <td>Unadjusted</td>    <th>                     </th>       <td></td>     \n",
@@ -593,7 +593,7 @@
        "\\textbf{Estimator:}        &      PanelOLS      & \\textbf{  R-squared (Between):}  &      0.4295      \\\\\n",
        "\\textbf{No. Observations:} &        1728        & \\textbf{  R-squared (Within):}   &      0.0537      \\\\\n",
        "\\textbf{Date:}             &  Sun, Mar 31 2024  & \\textbf{  R-squared (Overall):}  &      0.3621      \\\\\n",
-       "\\textbf{Time:}             &      16:37:08      & \\textbf{  Log-likelihood     }   &      285.77      \\\\\n",
+       "\\textbf{Time:}             &      23:59:14      & \\textbf{  Log-likelihood     }   &      285.77      \\\\\n",
        "\\textbf{Cov. Estimator:}   &     Unadjusted     & \\textbf{                     }   &                  \\\\\n",
        "\\textbf{}                  &                    & \\textbf{  F-statistic:       }   &      161.80      \\\\\n",
        "\\textbf{Entities:}         &        216         & \\textbf{  P-value            }   &      0.0000      \\\\\n",
@@ -638,7 +638,7 @@
        "Estimator:                   PanelOLS   R-squared (Between):              0.4295\n",
        "No. Observations:                1728   R-squared (Within):               0.0537\n",
        "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3621\n",
-       "Time:                        16:37:08   Log-likelihood                    285.77\n",
+       "Time:                        23:59:14   Log-likelihood                    285.77\n",
        "Cov. Estimator:            Unadjusted                                           \n",
        "                                        F-statistic:                      161.80\n",
        "Entities:                         216   P-value                           0.0000\n",
@@ -672,7 +672,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "  <th>Date:</th>             <td>Sun, Mar 31 2024</td> <th>  R-squared (Overall):</th>    <td>0.1589</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:41:44</td>     <th>  Log-likelihood     </th>     <td>1628.0</td>  \n",
+       "  <th>Time:</th>                 <td>23:59:37</td>     <th>  Log-likelihood     </th>     <td>1628.0</td>  \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Cov. Estimator:</th>      <td>Unadjusted</td>    <th>                     </th>        <td></td>     \n",
@@ -814,7 +814,7 @@
        "\\textbf{Estimator:}        &      PanelOLS      & \\textbf{  R-squared (Between):}  &      0.1387      \\\\\n",
        "\\textbf{No. Observations:} &        1728        & \\textbf{  R-squared (Within):}   &      0.2513      \\\\\n",
        "\\textbf{Date:}             &  Sun, Mar 31 2024  & \\textbf{  R-squared (Overall):}  &      0.1589      \\\\\n",
-       "\\textbf{Time:}             &      16:41:44      & \\textbf{  Log-likelihood     }   &      1628.0      \\\\\n",
+       "\\textbf{Time:}             &      23:59:37      & \\textbf{  Log-likelihood     }   &      1628.0      \\\\\n",
        "\\textbf{Cov. Estimator:}   &     Unadjusted     & \\textbf{                     }   &                  \\\\\n",
        "\\textbf{}                  &                    & \\textbf{  F-statistic:       }   &      38.706      \\\\\n",
        "\\textbf{Entities:}         &        216         & \\textbf{  P-value            }   &      0.0000      \\\\\n",
@@ -866,7 +866,7 @@
        "Estimator:                   PanelOLS   R-squared (Between):              0.1387\n",
        "No. Observations:                1728   R-squared (Within):               0.2513\n",
        "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.1589\n",
-       "Time:                        16:41:44   Log-likelihood                    1628.0\n",
+       "Time:                        23:59:37   Log-likelihood                    1628.0\n",
        "Cov. Estimator:            Unadjusted                                           \n",
        "                                        F-statistic:                      38.706\n",
        "Entities:                         216   P-value                           0.0000\n",
@@ -907,7 +907,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
        "  <th>Date:</th>             <td>Sun, Mar 31 2024</td> <th>  R-squared (Overall):</th>    <td>0.8636</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:43:40</td>     <th>  Log-likelihood     </th>     <td>1628.0</td>   \n",
+       "  <th>Time:</th>                 <td>23:59:41</td>     <th>  Log-likelihood     </th>     <td>1628.0</td>   \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Cov. Estimator:</th>      <td>Unadjusted</td>    <th>                     </th>        <td></td>      \n",
@@ -1675,7 +1675,7 @@
        "\\textbf{Estimator:}        &      PanelOLS      & \\textbf{  R-squared (Between):}  &      1.0000      \\\\\n",
        "\\textbf{No. Observations:} &        1728        & \\textbf{  R-squared (Within):}   &      0.2397      \\\\\n",
        "\\textbf{Date:}             &  Sun, Mar 31 2024  & \\textbf{  R-squared (Overall):}  &      0.8636      \\\\\n",
-       "\\textbf{Time:}             &      16:43:40      & \\textbf{  Log-likelihood     }   &      1628.0      \\\\\n",
+       "\\textbf{Time:}             &      23:59:41      & \\textbf{  Log-likelihood     }   &      1628.0      \\\\\n",
        "\\textbf{Cov. Estimator:}   &     Unadjusted     & \\textbf{                     }   &                  \\\\\n",
        "\\textbf{}                  &                    & \\textbf{  F-statistic:       }   &      43.449      \\\\\n",
        "\\textbf{Entities:}         &        216         & \\textbf{  P-value            }   &      0.0000      \\\\\n",
@@ -1935,7 +1935,7 @@
        "Estimator:                   PanelOLS   R-squared (Between):              1.0000\n",
        "No. Observations:                1728   R-squared (Within):               0.2397\n",
        "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.8636\n",
-       "Time:                        16:43:40   Log-likelihood                    1628.0\n",
+       "Time:                        23:59:41   Log-likelihood                    1628.0\n",
        "Cov. Estimator:            Unadjusted                                           \n",
        "                                        F-statistic:                      43.449\n",
        "Entities:                         216   P-value                           0.0000\n",
@@ -2184,7 +2184,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2211,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
