--- a/sgx_random_effects.ipynb
+++ b/sgx_random_effects.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
     "from scipy import stats\n",
     "\n",
     "import statsmodels.api as sm\n",
+    "from statsmodels.regression.linear_model import RegressionResults\n",
     "from linearmodels.panel import RandomEffects\n",
     "from linearmodels.panel.results import PanelResults, RandomEffectsResults, PanelEffectsResults\n",
     "\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +416,7 @@
        "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +848,7 @@
        "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -893,8 +894,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.2403\n",
       "Estimator:              RandomEffects   R-squared (Between):              0.2846\n",
       "No. Observations:                1728   R-squared (Within):               0.2318\n",
-      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.2751\n",
-      "Time:                        22:56:45   Log-likelihood                    1463.6\n",
+      "Date:                Mon, Apr 01 2024   R-squared (Overall):              0.2751\n",
+      "Time:                        05:57:37   Log-likelihood                    1463.6\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      90.746\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -950,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -962,8 +963,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                        0.3621\n",
       "Estimator:              RandomEffects   R-squared (Between):              0.4626\n",
       "No. Observations:                1728   R-squared (Within):               0.3616\n",
-      "Date:                Sun, Mar 31 2024   R-squared (Overall):              0.3621\n",
-      "Time:                        22:56:45   Log-likelihood                    282.02\n",
+      "Date:                Mon, Apr 01 2024   R-squared (Overall):              0.3621\n",
+      "Time:                        05:57:37   Log-likelihood                    282.02\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      162.81\n",
       "Entities:                           8   P-value                           0.0000\n",
@@ -1028,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1121,8 +1122,8 @@
       "Dep. Variable:               LEVERAGE   R-squared:                       0.233\n",
       "Model:                            GLS   Adj. R-squared:                  0.230\n",
       "Method:                 Least Squares   F-statistic:                     87.09\n",
-      "Date:                Sun, 31 Mar 2024   Prob (F-statistic):           1.66e-95\n",
-      "Time:                        22:56:46   Log-Likelihood:                 1128.2\n",
+      "Date:                Mon, 01 Apr 2024   Prob (F-statistic):           1.66e-95\n",
+      "Time:                        05:57:39   Log-Likelihood:                 1128.2\n",
       "No. Observations:                1728   AIC:                            -2242.\n",
       "Df Residuals:                    1721   BIC:                            -2204.\n",
       "Df Model:                           6                                         \n",
@@ -1191,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1399,14 +1400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Marginal LM Statistic for Time Random Effects: -0.8312802772875956\n",
+      "Marginal LM Statistic for Time Random Effects: -0.7065842675216513\n",
       "p-value of Marginal LM test for Time Random ffects: 0.0\n"
      ]
     }
@@ -1424,12 +1425,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the results of the LM-test, only the joint LM and conditional LM test for entity effects were significant. However, the significance of the joint LM test is powered by the significance of the conditional LM test for entity as can be seen from the insignificance of the marginal LM tests. Thus, we should strongly consider the 1-way entity random effects model over the 2-way random effects model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Log-Likelihood Ratio Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,50 +1466,193 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Joint LR Test"
+    "### Correlated Entity Random Effects Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log-Likelihood Test Statistic: 1692.3510468266113\n",
-      "Log-Likelihood Test Statistic: 0.0\n"
+      "                        RandomEffects Estimation Summary                        \n",
+      "================================================================================\n",
+      "Dep. Variable:               LEVERAGE   R-squared:                        0.2951\n",
+      "Estimator:              RandomEffects   R-squared (Between):              0.5402\n",
+      "No. Observations:                1728   R-squared (Within):               0.2401\n",
+      "Date:                Mon, Apr 01 2024   R-squared (Overall):              0.4959\n",
+      "Time:                        06:12:44   Log-likelihood                    1505.0\n",
+      "Cov. Estimator:            Unadjusted                                           \n",
+      "                                        F-statistic:                      59.869\n",
+      "Entities:                         216   P-value                           0.0000\n",
+      "Avg Obs:                       8.0000   Distribution:                 F(12,1716)\n",
+      "Min Obs:                       8.0000                                           \n",
+      "Max Obs:                       8.0000   F-statistic (robust):             59.869\n",
+      "                                        P-value                           0.0000\n",
+      "Time periods:                       8   Distribution:                 F(12,1716)\n",
+      "Avg Obs:                       216.00                                           \n",
+      "Min Obs:                       216.00                                           \n",
+      "Max Obs:                       216.00                                           \n",
+      "                                                                                \n",
+      "                                Parameter Estimates                                 \n",
+      "====================================================================================\n",
+      "                  Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
+      "------------------------------------------------------------------------------------\n",
+      "SIZE                 0.0834     0.0103     8.1073     0.0000      0.0632      0.1036\n",
+      "PROFITABILITY       -0.2270     0.0363    -6.2521     0.0000     -0.2983     -0.1558\n",
+      "TANG                 0.4346     0.0364     11.927     0.0000      0.3631      0.5060\n",
+      "LIQUID              -0.0228     0.0022    -10.324     0.0000     -0.0271     -0.0184\n",
+      "MCAP             -4.195e-12   4.13e-12    -1.0156     0.3100   -1.23e-11   3.906e-12\n",
+      "SOLV                -0.0002  5.636e-05    -3.4750     0.0005     -0.0003  -8.531e-05\n",
+      "avgSIZE             -0.0677     0.0104    -6.5114     0.0000     -0.0881     -0.0473\n",
+      "avgPROFITABILITY    -0.5188     0.2443    -2.1238     0.0338     -0.9979     -0.0397\n",
+      "avgTANG             -0.3027     0.0757    -3.9974     0.0001     -0.4512     -0.1542\n",
+      "avgLIQUID           -0.0537     0.0089    -6.0163     0.0000     -0.0712     -0.0362\n",
+      "avgMCAP           2.819e-12  5.884e-12     0.4791     0.6319  -8.721e-12   1.436e-11\n",
+      "avgSOLV             -0.0006     0.0002    -2.3796     0.0174     -0.0010  -9.985e-05\n",
+      "====================================================================================\n"
      ]
     }
    ],
    "source": [
-    "lr_test(pooled_ols_res, tw_re_fit)"
+    "endo_var = 'LEVERAGE'\n",
+    "exog_vars = ['SIZE',\n",
+    "             'PROFITABILITY',\n",
+    "             'TANG',\n",
+    "             'LIQUID',\n",
+    "             'MCAP',\n",
+    "             'SOLV']\n",
+    "\n",
+    "endo = sgx[endo_var]\n",
+    "\n",
+    "mean_exog_vars = ['avg' + var for var in exog_vars]\n",
+    "sgx[mean_exog_vars] = sgx[exog_vars].groupby(level= 'Company Code').transform('mean')\n",
+    "\n",
+    "exog = sgx[exog_vars + mean_exog_vars]\n",
+    "\n",
+    "corr_entity_re_mod = RandomEffects(endo, exog)\n",
+    "\n",
+    "corr_entity_re_res = corr_entity_re_mod.fit()\n",
+    "\n",
+    "print(corr_entity_re_res.summary)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Conditional LR Test for Entity Random Effects"
+    "## Hausman Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hausman_test(fixed_effects: PanelEffectsResults, random_effects: RandomEffectsResults|RegressionResults):    \n",
+    "    # (I) find overlapping coefficients:\n",
+    "    common_coef = list(set(fixed_effects.params.index).intersection(random_effects.params.index))\n",
+    "\n",
+    "    # (II) calculate differences between FE and RE:\n",
+    "    b_diff = np.array(fixed_effects.params[common_coef] - random_effects.params[common_coef])\n",
+    "    df = len(b_diff)\n",
+    "    b_diff.reshape((df, 1))\n",
+    "    \n",
+    "    b_fe_cov = fixed_effects.cov\n",
+    "    try:\n",
+    "        b_re_cov = random_effects.cov\n",
+    "    except:\n",
+    "        b_re_cov = random_effects.cov_params()\n",
+    "\n",
+    "    b_cov_diff = np.array(b_fe_cov.loc[common_coef, common_coef] -\n",
+    "                        b_re_cov.loc[common_coef, common_coef])\n",
+    "    b_cov_diff.reshape((df, df))\n",
+    "\n",
+    "    # (III) calculate test statistic:\n",
+    "    hausman_stat = abs(np.transpose(b_diff) @ np.linalg.inv(b_cov_diff) @ b_diff)\n",
+    "    hausman_p = 1 - stats.chi2.cdf(hausman_stat, df)\n",
+    "\n",
+    "    print(f\"Hausman Test Statistic: {hausman_stat}\")\n",
+    "    print(f\"Hausman Test Statistic: {hausman_p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tw_fe_fit = load_pickle('model/two_way_fe.pickle')\n",
+    "\n",
+    "entity_fe_fit = load_pickle('model/entity_fe.pickle')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2-way FE vs. 2-way RE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log-Likelihood Test Statistic: 1692.3510468266113\n",
-      "Log-Likelihood Test Statistic: 0.0\n"
+      "Hausman Test Statistic: 67.01781028792132\n",
+      "Hausman Test Statistic: 5.9048321787713576e-12\n"
      ]
     }
    ],
    "source": [
-    "lr_test(time_re_fit, tw_re_fit)"
+    "hausman_test(tw_fe_fit, tw_re_fit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entity FE vs. Entity RE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hausman Test Statistic: 128.12439868380616\n",
+      "Hausman Test Statistic: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "hausman_test(entity_fe_fit, entity_re_fit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time FE vs. Time RE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CRE vs. RE Test"
    ]
   },
   {
