Commit final model

--- a/sgx_random_effects.ipynb
+++ b/sgx_random_effects.ipynb
@@ -2257,7 +2257,7 @@
     "\n",
     "- When comparing between fixed effects and random effects models, the fixed effects models take precedence over the random effects models except when comparing time effects models.\n",
     "\n",
-    "&rarr; This suggests that there are fixed "
+    "&rarr; This suggests that there are fixed effects in the model. However, as a CRE model can account for fixed effects, we shall elect to it to maintain flexibility in our model especially as it remains significant at even extreme levels of significance"
    ]
   }
  ],
