Commit CRE Stress Test

--- a/sgx_random_effects.ipynb
+++ b/sgx_random_effects.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "[1728 rows x 34 columns]"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
       "Estimator:              RandomEffects   R-squared (Between):              0.2846\n",
       "No. Observations:                1728   R-squared (Within):               0.2318\n",
       "Date:                Mon, Apr 01 2024   R-squared (Overall):              0.2751\n",
-      "Time:                        13:47:35   Log-likelihood                    1463.6\n",
+      "Time:                        20:49:35   Log-likelihood                    1463.6\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      90.746\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
       "Estimator:              RandomEffects   R-squared (Between):              0.4626\n",
       "No. Observations:                1728   R-squared (Within):               0.3616\n",
       "Date:                Mon, Apr 01 2024   R-squared (Overall):              0.3621\n",
-      "Time:                        13:47:35   Log-likelihood                    282.02\n",
+      "Time:                        20:49:35   Log-likelihood                    282.02\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      162.81\n",
       "Entities:                           8   P-value                           0.0000\n",
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
       "Model:                            GLS   Adj. R-squared:                  0.230\n",
       "Method:                 Least Squares   F-statistic:                     87.09\n",
       "Date:                Mon, 01 Apr 2024   Prob (F-statistic):           1.66e-95\n",
-      "Time:                        13:47:37   Log-Likelihood:                 1128.2\n",
+      "Time:                        20:49:37   Log-Likelihood:                 1128.2\n",
       "No. Observations:                1728   AIC:                            -2242.\n",
       "Df Residuals:                    1721   BIC:                            -2204.\n",
       "Df Model:                           6                                         \n",
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1248,7 @@
     "        Q_1 = (1 / sigma_2_sq) * u_tilda.T @ np.kron(J_n_bar, J_T_bar) @ u_tilda\n",
     "        Q_2 = (1 / (n - 1)*sigma_v_sq) * u_tilda.T @ np.kron(E_n, J_T_bar) @ u_tilda\n",
     "\n",
-    "        LM_M_entity = ((np.sqrt(2) * sigma_2_sq * sigma_v_sq) / np.sqrt(T * (T - 1) * (sigma_v_sq ** 2 + (n - 1) * sigma_2_sq ** 2))) *\\\n",
+    "        LM_M_entity = ((np.sqrt(T) * sigma_2_sq * sigma_v_sq) / np.sqrt(2 * (T - 1) * (sigma_v_sq ** 2 + (n - 1) * sigma_2_sq ** 2))) *\\\n",
     "             ((1/sigma_2_sq) * (Q_1 - 1) + ((n-1) / sigma_v_sq) * (Q_2 - 1))\n",
     "        \n",
     "        return LM_M_entity\n",
@@ -1260,7 +1260,7 @@
     "        R_1 = (1 / sigma_1_sq) * u_tilda.T @ np.kron(J_T_bar, J_n_bar) @ u_tilda\n",
     "        R_2 = (1 / (T - 1)*sigma_v_sq) * u_tilda.T @ np.kron(J_n_bar, E_T) @ u_tilda\n",
     "\n",
-    "        LM_M_time = ((np.sqrt(2) * sigma_1_sq * sigma_v_sq) / np.sqrt(n * (n - 1) * (sigma_v_sq ** 2 + (T - 1) * sigma_1_sq ** 2))) *\\\n",
+    "        LM_M_time = ((np.sqrt(n) * sigma_1_sq * sigma_v_sq) / np.sqrt(2 * (n - 1) * (sigma_v_sq ** 2 + (T - 1) * sigma_1_sq ** 2))) *\\\n",
     "             ((1/sigma_1_sq) * (R_1 - 1) + ((T-1) / sigma_v_sq) * (R_2 - 1))\n",
     "        \n",
     "        return LM_M_time\n",
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1377,15 +1377,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Marginal LM Statistic for Entity Random Effects: 0.20697645959347585\n",
-      "p-value of Marginal LM test for Entity Random ffects: 0.6491476164436869\n"
+      "Marginal LM Statistic for Entity Random Effects: 0.8279058383739034\n",
+      "p-value of Marginal LM test for Entity Random ffects: 0.36287877746040853\n"
      ]
     }
    ],
@@ -1400,22 +1400,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Marginal LM Statistic for Time Random Effects: -0.0076970396045147734\n",
-      "p-value of Marginal LM test for Time Random ffects: 0.0\n"
+      "Marginal LM Statistic for Time Random Effects: -0.8312802772875956\n",
+      "p-value of Marginal LM test for Time Random ffects: 0.6380974154258743\n"
      ]
     }
    ],
    "source": [
     "marg_time_stat = marg_LM_stat(entity_re_fit, how= 'time')\n",
     "\n",
-    "marg_time_p = stats.chi2.cdf(marg_time_stat, 1)\n",
+    "marg_time_p = stats.chi2.cdf(abs(marg_time_stat), 1)\n",
     "\n",
     "print(f\"Marginal LM Statistic for Time Random Effects: {marg_time_stat}\")\n",
     "print(f\"p-value of Marginal LM test for Time Random ffects: {marg_time_p}\")"
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
       "Estimator:              RandomEffects   R-squared (Between):              0.4508\n",
       "No. Observations:                1728   R-squared (Within):               0.2401\n",
       "Date:                Mon, Apr 01 2024   R-squared (Overall):              0.4129\n",
-      "Time:                        13:47:37   Log-likelihood                    1505.4\n",
+      "Time:                        20:49:38   Log-likelihood                    1505.4\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      53.744\n",
       "Entities:                         216   P-value                           0.0000\n",
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1696,7 @@
       "Estimator:              RandomEffects   R-squared (Between):              0.9970\n",
       "No. Observations:                1728   R-squared (Within):               0.3616\n",
       "Date:                Mon, Apr 01 2024   R-squared (Overall):              0.3648\n",
-      "Time:                        13:47:37   Log-likelihood                    285.75\n",
+      "Time:                        20:49:38   Log-likelihood                    285.75\n",
       "Cov. Estimator:            Unadjusted                                           \n",
       "                                        F-statistic:                      82.090\n",
       "Entities:                           8   P-value                           0.0000\n",
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1778,7 +1778,7 @@
       "Model:                            GLS   Adj. R-squared:                  0.264\n",
       "Method:                 Least Squares   F-statistic:                     52.54\n",
       "Date:                Mon, 01 Apr 2024   Prob (F-statistic):          1.41e-107\n",
-      "Time:                        13:47:38   Log-Likelihood:                 1164.0\n",
+      "Time:                        20:49:39   Log-Likelihood:                 1164.0\n",
       "No. Observations:                1728   AIC:                            -2302.\n",
       "Df Residuals:                    1715   BIC:                            -2231.\n",
       "Df Model:                          12                                         \n",
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,14 +1900,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hausman Test Statistic: 67.01781028791942\n",
+      "Hausman Test Statistic: 67.01781028791862\n",
       "Hausman Test Statistic: 5.9048321787713576e-12\n"
      ]
     }
@@ -1925,14 +1925,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hausman Test Statistic: 128.12439868380366\n",
+      "Hausman Test Statistic: 128.1243986838033\n",
       "Hausman Test Statistic: 0.0\n"
      ]
     }
@@ -1957,15 +1957,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hausman Test Statistic: 7.698830119454162\n",
-      "Hausman Test Statistic: 0.35989827537203667\n"
+      "Hausman Test Statistic: 7.698830119454909\n",
+      "Hausman Test Statistic: 0.3598982753719667\n"
      ]
     }
    ],
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2138,14 +2138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Marginal LM Statistic for Entity Correlated Random Effects: -0.007498517709995994\n",
+      "Marginal LM Statistic for Entity Correlated Random Effects: -0.8098399126795673\n",
       "p-value of Marginal LM test for Entity Correlated Random ffects: 1.0\n"
      ]
     }
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2187,7 +2187,7 @@
       "Estimator:              RandomEffects   R-squared (Between):              0.4508\n",
       "No. Observations:                1728   R-squared (Within):               0.2401\n",
       "Date:                Mon, Apr 01 2024   R-squared (Overall):              0.4129\n",
-      "Time:                        13:56:57   Log-likelihood                    1505.4\n",
+      "Time:                        20:51:23   Log-likelihood                    1505.4\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                      53.744\n",
       "Entities:                         216   P-value                           0.0000\n",
